return entire search record and update schema
